# raytrace

./: .clang-format  .gitmodules  CMakeLists.txt  color.h  generate_projects.sh  glerror.h  glinit.cpp  glinit.h  gltextureblitter.cpp  gltextureblitter.h  intersection.h  main.cpp  objparser.cpp  objparser.h  ray.h  raytracer.cpp  raytracer.h  run-clang-format.sh  settings.cpp  settings.h  vecmath.h
modules/: CMakeLists.txt
